--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -2,47 +2,42 @@
 	"name": "app",
 	"version": "1.0.0",
 	"private": true,
-	"scripts": {
-		"dev": "dotenv solid-start dev -- --port 3400",
-		"build": "solid-start build",
-		"start": "solid-start start --port 3400"
-	},
 	"type": "module",
+	"scripts": {
+		"dev": "vinxi dev --port 3400",
+		"build": "vinxi build",
+		"start": "dotenvx run -- vinxi start --port 3400",
+		"version": "vinxi version"
+	},
 	"devDependencies": {
-		"@iconify-json/bi": "^1.1.17",
-		"@iconify-json/ci": "^1.1.9",
-		"@iconify-json/radix-icons": "^1.1.10",
-		"autoprefixer": "^10.4.14",
-		"dotenv-cli": "^7.2.1",
-		"postcss": "^8.4.25",
-		"solid-devtools": "^0.27.3",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.7.2",
-		"unplugin-icons": "^0.16.5",
-		"vite": "^4.4.3",
-		"vite-plugin-pwa": "^0.16.4"
+		"@dotenvx/dotenvx": "^1.31.0",
+		"@iconify-json/bi": "1.2.2",
+		"@iconify-json/ci": "1.2.2",
+		"@iconify-json/radix-icons": "1.2.2",
+		"@types/node": "22.10.2",
+		"autoprefixer": "10.4.20",
+		"postcss": "8.4.49",
+		"tailwindcss": "3.4.17",
+		"typescript": "5.7.2",
+		"unplugin-icons": "0.22.0",
+		"vite-plugin-pwa": "0.21.1"
 	},
 	"dependencies": {
-		"@auth/core": "^0.9.0",
-		"@auth/solid-start": "^0.1.1",
-		"@radix-ui/colors": "^1.0.0",
-		"@solid-primitives/connectivity": "^0.3.15",
-		"@solid-primitives/page-visibility": "^2.0.12",
-		"@solidjs/meta": "^0.28.5",
-		"@solidjs/router": "^0.8.2",
-		"@thisbeyond/solid-dnd": "^0.7.4",
-		"@types/node": "^20.4.2",
-		"dotenv": "^16.3.1",
-		"lib": "workspace:^",
-		"motion": "^10.16.2",
-		"solid-js": "^1.9.3",
-		"solid-motionone": "^1.0.2",
-		"solid-start": "^0.2.26",
-		"solid-start-node": "^0.2.26",
-		"solid-start-vercel": "^0.2.26",
-		"solid-transition-group": "^0.2.2",
-		"undici": "^5.22.1",
-		"workbox-window": "^7.0.0",
-		"zod": "^3.21.4"
+		"@radix-ui/colors": "3.0.0",
+		"@solid-mediakit/auth": "3.1.2",
+		"@solid-primitives/connectivity": "0.3.20",
+		"@solid-primitives/page-visibility": "2.0.17",
+		"@solidjs/meta": "0.29.4",
+		"@solidjs/router": "0.15.2",
+		"@solidjs/start": "1.0.10",
+		"@thisbeyond/solid-dnd": "0.7.5",
+		"lib": "workspace:*",
+		"motion": "11.15.0",
+		"solid-js": "1.9.3",
+		"solid-motionone": "1.0.2",
+		"solid-transition-group": "0.2.3",
+		"vinxi": "0.5.1",
+		"workbox-window": "7.3.0",
+		"zod": "3.24.1"
 	}
 }
