--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
 		"target": "ESNext",
 		"moduleResolution": "bundler",
 		"verbatimModuleSyntax": true,
+		"isolatedModules": true,
 
 		// Strictness
 		"strict": true,
