--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
 		"clean": "git clean -xfd node_modules packages -e packages/app/.env -e packages/server/.env && pnpm install"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.4.1",
-		"@total-typescript/ts-reset": "^0.6.1",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
-		"eslint": "^8.44.0",
-		"eslint-plugin-biome": "^0.8.32",
-		"prettier": "^2.8.7",
-		"turbo": "^2.3.3",
-		"typescript": "^5.7.2"
+		"@biomejs/biome": "1.9.4",
+		"@total-typescript/ts-reset": "0.6.1",
+		"@typescript-eslint/eslint-plugin": "5.62.0",
+		"@typescript-eslint/parser": "5.62.0",
+		"eslint": "8.57.1",
+		"eslint-plugin-biome": "0.8.32",
+		"prettier": "2.8.8",
+		"turbo": "2.3.3",
+		"typescript": "5.7.2"
 	},
 	"pnpm": {
 		"overrides": {
