--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -8,11 +8,11 @@
 		"test": "vitest"
 	},
 	"dependencies": {
-		"zod": "^3.21.4"
+		"zod": "3.24.1"
 	},
 	"devDependencies": {
-		"@vitest/ui": "^2.1.8",
-		"typescript": "^5.7.2",
-		"vitest": "^2.1.8"
+		"@vitest/ui": "2.1.8",
+		"typescript": "5.7.2",
+		"vitest": "2.1.8"
 	}
 }
