--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,18 +7,18 @@
 		"dev": "wrangler dev"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20230710.0",
-		"typescript": "^5.7.2",
-		"wrangler": "^3.95.0"
+		"@cloudflare/workers-types": "4.20241205.0",
+		"typescript": "5.7.2",
+		"wrangler": "3.95.0"
 	},
 	"dependencies": {
-		"@cloudflare/puppeteer": "^0.0.5",
+		"@cloudflare/puppeteer": "0.0.5",
 		"@effect/data": "0.12.10",
 		"@effect/io": "0.27.2",
 		"@microlabs/otel-cf-workers": "1.0.0-rc.14",
-		"@opentelemetry/api": "^1.6.0",
-		"hono": "^3.6.0",
+		"@opentelemetry/api": "1.9.0",
+		"hono": "3.6.0",
 		"lib": "workspace:^",
-		"zod": "^3.21.4"
+		"zod": "3.24.1"
 	}
 }
