--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.base.json",
+	"extends": "../../tsconfig.base.jsonc",
 	"include": ["./src"],
 
 	"files": ["./reset.d.ts"],
