--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,8 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"formatter": {
+		"enabled": true
+	},
 	"organizeImports": {
 		"enabled": true
 	},
@@ -9,12 +12,13 @@
 			"lineWidth": 120
 		}
 	},
-	"formatter": {
-		"ignore": ["**/tsconfig.*.json"]
+	"json": {
+		"formatter": {
+			"trailingCommas": "none"
+		}
 	},
 	"linter": {
 		"enabled": true,
-		"ignore": ["**/tsconfig.*.json"],
 		"rules": {
 			"recommended": true,
 			"complexity": {
