Everything except syncing back, sigh...

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,7 @@
 		"@thisbeyond/solid-dnd": "0.7.5",
 		"lib": "workspace:*",
 		"motion": "11.15.0",
+		"reconnecting-websocket": "^4.4.0",
 		"solid-js": "1.9.3",
 		"solid-motionone": "1.0.2",
 		"solid-transition-group": "0.2.3",
