--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -11,7 +11,7 @@ vars = { ENV_DISCRIMINATOR = "prod", OTEL_SERVICE_NAME = "shopping-bird", OTEL_E
 enabled = true
 
 [durable_objects]
-bindings = [{ name = "DO", class_name = "TheShoppingBird" }]
+bindings = [{ name = "TinyObject", class_name = "TinyObject" }]
 
 [triggers]
 # Every 2 minutes between 05:00 and 20:00 UTC (i.e. 07:00 and 22:00 GMT+2 )
@@ -19,4 +19,4 @@ crons = ["*/2 5-20 * * *"]
 
 [[migrations]]
 tag = "v1"
-new_classes = ["TheShoppingBird"]
+new_classes = ["TheShoppingBird", "TinyObject"]
