--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,9 +33,11 @@
 		"@thisbeyond/solid-dnd": "0.7.5",
 		"lib": "workspace:*",
 		"motion": "11.15.0",
+		"reconnecting-websocket": "^4.4.0",
 		"solid-js": "1.9.3",
 		"solid-motionone": "1.0.2",
 		"solid-transition-group": "0.2.3",
+		"tinybase": "^5.4.4",
 		"vinxi": "0.5.1",
 		"workbox-window": "7.3.0",
 		"zod": "3.24.1"
