--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_flags = ["nodejs_compat"]
 
 logpush = true
 
-vars = { ENV_DISCRIMINATOR = "prod", OTEL_SERVICE_NAME = "shopping-bird", OTEL_EXPORTER_OTLP_ENDPOINT = "https://in-otel.hyperdx.io", KEEP_EMAIL = "jakob.stahl91@gmail.com", KEEP_SHOPPING_LIST_ID = "1cT_A1zlW4UkVQPdiQxOy1GyqobwBktgbt3dThQ7p7sHCsKJmb3izdzA_6mq7GQ" }
+vars = { KEEP_EMAIL = "jakob.stahl91@gmail.com", KEEP_SHOPPING_LIST_ID = "1cT_A1zlW4UkVQPdiQxOy1GyqobwBktgbt3dThQ7p7sHCsKJmb3izdzA_6mq7GQ" }
 
 [observability.logs]
 enabled = true
@@ -19,4 +19,8 @@ crons = ["*/2 5-20 * * *"]
 
 [[migrations]]
 tag = "v1"
-new_classes = ["TheShoppingBird", "TinyDO"]
+new_classes = ["TheShoppingBird"]
+
+[[migrations]]
+tag = "v2"
+renamed_classes = [{ from = "TheShoppingBird", to = "TinyDO" }]
