--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,14 +12,7 @@
 		"wrangler": "3.95.0"
 	},
 	"dependencies": {
-		"@cloudflare/puppeteer": "0.0.5",
-		"@effect/data": "0.12.10",
-		"@effect/io": "0.27.2",
-		"@microlabs/otel-cf-workers": "1.0.0-rc.14",
-		"@opentelemetry/api": "1.9.0",
-		"hono": "3.6.0",
 		"lib": "workspace:^",
-		"tinybase": "^5.4.4",
-		"zod": "3.24.1"
+		"tinybase": "^5.4.4"
 	}
 }
