Disable `noUselessConstructor` lint rule

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -23,6 +23,7 @@
 			"recommended": true,
 			"complexity": {
 				"noForEach": "off",
+				"noUselessConstructor": "off",
 				"useLiteralKeys": "off"
 			},
 			"style": {
