--- a/packages/server/wrangler.toml
+++ b/packages/server/wrangler.toml
@@ -11,7 +11,7 @@ vars = { KEEP_EMAIL = "jakob.stahl91@gmail.com", KEEP_SHOPPING_LIST_ID = "1cT_A1
 enabled = true
 
 [durable_objects]
-bindings = [{ name = "TinyDO", class_name = "TinyDO" }]
+bindings = [{ name = "ShoppingBirdDO", class_name = "ShoppingBirdDO" }]
 
 [[migrations]]
 tag = "v1"
@@ -23,4 +23,5 @@ renamed_classes = [{ from = "TheShoppingBird", to = "TinyDO" }]
 
 [[migrations]]
 tag = "v3"
-new_sqlite_classes = ["TinyDO"]
+deleted_classes = ["TinyDO"]
+new_sqlite_classes = ["ShoppingBirdDO"]
